fix diacritic typo

--- a/hugo.toml
+++ b/hugo.toml
@@ -65,7 +65,7 @@ enableEmoji = true
 
 [[menu.main]]
   identifier = "ashtanga"
-  name = "Aśṭāṅga"
+  name = "Aṣṭāṅga"
   url = "/ashtanga/"
   weight = 2
 
