--- a/hugo.toml
+++ b/hugo.toml
@@ -1,12 +1,17 @@
-baseURL = 'https://homerhanumat.github.io'
+baseURL = 'https://tridentmoon.netlify.app'
 languageCode = 'en-us'
 title = 'Trident Moon'
-theme = ["github.com/theNewDynamic/gohugo-theme-ananke/v2"]
-outputDir = "docs"
 
 MetaDataFormat = "yaml"
 DefaultContentLanguage = "en"
 SectionPagesMenu = "main"
+
+[module]
+[[module.imports]]
+disable = false
+ignoreConfig = false
+ignoreImports = false
+path = 'github.com/theNewDynamic/gohugo-theme-ananke/v2'
 
 
 
